--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Hello, I'm Omar <br><span>Web Developer</span></h2>
             <br>
             <h3></h3>
-            <a href="https://drive.google.com/file/d/17EtXiX0qll_bHN2JS8FbpFT1TuzJcGBQ/view?usp=sharing" class="main-btn">Download</a>
+            <a href="https://drive.google.com/file/d/17EtXiX0qll_bHN2JS8FbpFT1TuzJcGBQ/view?usp=sharing" class="main-btn">Download cv</a>
         </div>
     </section>
 
@@ -76,6 +76,7 @@
         <div class="projects" id="projects">
          <h2 class="title">Projects</h2>
          <div class="content">
+
             <div class="project-card">
                 <div class="project-image">
                     <img src="images/work-3.jpg"/>
